--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@molitio/ui-core",
-    "version": "0.9.0-alpha.0",
+    "version": "0.10.2-alpha.0",
     "author": "molitio foundation",
     "description": "Universal reusable React UI Components",
     "license": "CC0-1.0",
@@ -114,6 +114,7 @@
         "babel-loader": "^8.2.3",
         "babel-preset-latest": "^6.24.1",
         "cross-env": "^7.0.3",
+        "device-detector-js": "^3.0.2",
         "eslint": "^8.3.0",
         "eslint-config-google": "^0.14.0",
         "eslint-plugin-storybook": "^0.5.5",
