--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@molitio/ui-core",
-    "version": "0.10.2-alpha.0",
+    "version": "0.10.3-alpha.0",
     "author": "molitio foundation",
     "description": "Universal reusable React UI Components",
     "license": "CC0-1.0",
@@ -92,6 +92,7 @@
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-image": "^2.1.1",
+        "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-replace": "^3.0.0",
         "@rollup/plugin-typescript": "^8.3.0",
