--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -62,7 +62,7 @@
     "scripts": {
         "prepublish": "npm run build",
         "publish": "npm publish ./dist",
-        "prebuild": "npm run clean && prettier --write src",
+        "prebuild": "npm run clean && prettier --write src/",
         "build": "rollup --config",
         "postbuild": "node packageBuilder",
         "build:watch": "rollup --config --watch",
@@ -106,6 +106,7 @@
         "@storybook/preset-typescript": "^3.0.0",
         "@storybook/react": "^6.4.9",
         "@storybook/theming": "^6.4.16",
+        "@storybook/addon-a11y": "^6.4.19",
         "@types/jasmine": "^3.10.2",
         "@types/node": "^16.11.10",
         "@types/react": "^17.0.37",
@@ -123,6 +124,7 @@
         "eslint-plugin-storybook": "^0.5.5",
         "fork-ts-checker-webpack-plugin": "^6.5.0",
         "husky": "^7.0.4",
+        "i": "^0.3.7",
         "jasmine": "^3.10.0",
         "node-sass": "^7.0.1",
         "npm": "^8.7.0",
@@ -134,6 +136,7 @@
         "rollup": "^2.60.1",
         "rollup-plugin-buble": "^0.19.8",
         "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-scss": "^3.0.0",
         "rollup-plugin-sizes": "^1.0.4",
         "rollup-plugin-svg": "^2.0.0",
         "rollup-plugin-typescript2": "^0.31.1",
@@ -154,8 +157,5 @@
         "src",
         ".storybook"
     ],
-    "dependencies": {
-        "@storybook/addon-a11y": "^6.4.19",
-        "rollup-plugin-postcss": "^4.0.2"
-    }
+    "dependencies": {}
 }
