--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -96,17 +96,19 @@
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-replace": "^3.0.0",
         "@rollup/plugin-typescript": "^8.3.0",
-        "@storybook/addon-actions": "^6.4.9",
-        "@storybook/addon-essentials": "^6.4.9",
-        "@storybook/addon-links": "^6.4.9",
+        "@storybook/addon-a11y": "^6.4.19",
+        "@storybook/addon-actions": "^6.5.3",
+        "@storybook/addon-essentials": "^6.5.3",
+        "@storybook/addon-interactions": "^6.5.3",
+        "@storybook/addon-links": "^6.5.3",
         "@storybook/addons": "^6.4.16",
-        "@storybook/builder-webpack5": "^6.4.9",
-        "@storybook/manager-webpack5": "^6.4.9",
+        "@storybook/builder-webpack5": "^6.5.3",
+        "@storybook/manager-webpack5": "^6.5.3",
         "@storybook/preset-scss": "^1.0.3",
         "@storybook/preset-typescript": "^3.0.0",
-        "@storybook/react": "^6.4.9",
+        "@storybook/react": "^6.5.3",
+        "@storybook/testing-library": "^0.0.11",
         "@storybook/theming": "^6.4.16",
-        "@storybook/addon-a11y": "^6.4.19",
         "@types/jasmine": "^3.10.2",
         "@types/node": "^16.11.10",
         "@types/react": "^17.0.37",
@@ -124,27 +126,25 @@
         "eslint-plugin-storybook": "^0.5.5",
         "fork-ts-checker-webpack-plugin": "^6.5.0",
         "husky": "^7.0.4",
-        "i": "^0.3.7",
-        "jasmine": "^3.10.0",
         "node-sass": "^7.0.1",
         "npm": "^8.7.0",
-        "postcss": "^8.4.13",
+        "postcss": "^8.4.14",
         "postcss-scss": "^4.0.4",
+        "prettier": "2.6.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-jss": "^10.8.2",
         "rollup": "^2.60.1",
         "rollup-plugin-buble": "^0.19.8",
         "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-scss": "^3.0.0",
         "rollup-plugin-sizes": "^1.0.4",
         "rollup-plugin-svg": "^2.0.0",
         "rollup-plugin-typescript2": "^0.31.1",
-        "sass": "^1.51.0",
+        "sass": "^1.52.1",
         "sass-loader": "^12.6.0",
         "size-limit": "^7.0.3",
-        "storybook-addon-sass-postcss": "^0.1.1",
-        "style-loader": "^3.3.1",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
         "ts-node-dev": "^1.1.8",
@@ -156,6 +156,5 @@
     "workspaces": [
         "src",
         ".storybook"
-    ],
-    "dependencies": {}
+    ]
 }
