--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@molitio/ui-core",
-    "version": "0.11.4-alpha.0",
+    "version": "0.12.0-alpha.0",
     "author": "molitio foundation",
     "description": "Universal reusable React UI Components",
     "license": "CC0-1.0",
@@ -91,7 +91,7 @@
         "@mdx-js/rollup": "^2.0.0-rc.2",
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/plugin-buble": "^0.21.3",
-        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-commonjs": "^22.0.0",
         "@rollup/plugin-image": "^2.1.1",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.0.6",
@@ -135,13 +135,10 @@
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-jss": "^10.9.0",
-        "rollup": "^2.60.1",
+        "rollup": "^2.75.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
-        "rollup-plugin-scss": "^3.0.0",
-        "rollup-plugin-sizes": "^1.0.4",
-        "rollup-plugin-svg": "^2.0.0",
-        "rollup-plugin-typescript2": "^0.31.1",
+        "rollup-plugin-size": "^0.2.2",
         "sass": "^1.52.1",
         "sass-loader": "^12.6.0",
         "size-limit": "^7.0.3",
