--- a/.github/workflows/ui-core-npm-publish.yml
+++ b/.github/workflows/ui-core-npm-publish.yml
@@ -11,7 +11,7 @@ jobs:
       - run: node --version
       - run: npm i
         working-directory: ui-core
-      - run: npm run build && npm run publish && npm test
+      - run: npm run publish && npm test
         working-directory: ui-core
       - uses: JS-DevTools/npm-publish@v1
         with:
