--- a/ui-core/.babelrc
+++ b/ui-core/.babelrc
@@ -16,7 +16,7 @@
                 }
             }
         ],
-        "@babel/preset-react",
+        ["@babel/preset-react", { "runtime": "automatic" }],
         "@babel/preset-typescript"
     ],
     "plugins": ["@babel/proposal-class-properties", "@babel/proposal-object-rest-spread"]
