--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@molitio/ui-core",
-    "version": "0.12.0-alpha.0",
+    "version": "0.12.4-alpha.0",
     "author": "molitio foundation",
     "description": "Universal reusable React UI Components",
     "license": "CC0-1.0",
@@ -19,6 +19,7 @@
     "main": "dist/index.js",
     "module": "dist/esm/index.js",
     "typings": "dist/index.d.ts",
+    "outputTestSample": "tests/index.js",
     "bundle": {
         "esm": "dist/bundle/esm/index.js",
         "umd": "dist/bundle/umd/index.js"
@@ -34,7 +35,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+            "pre-commit": "eslint '*/**/*.{js,ts,tsx, css, scss}' --quiet --fix"
         }
     },
     "size-limit": [
@@ -60,20 +61,22 @@
         }
     ],
     "scripts": {
-        "prepublish": "npm run build",
-        "publish": "npm publish ./dist",
         "prebuild": "npm run clean && prettier --write src/",
         "build": "rollup --config",
-        "postbuild": "node packageBuilder",
+        "postbuild": "node packageBuilder && npm run create-artifact",
         "build:watch": "rollup --config --watch",
-        "lint": "eslint '*/**/*.{js,ts,tsx}'",
-        "lint-fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+        "prepublish": "npm run build",
+        "publish": "npm publish ./dist",
+        "lint": "eslint '*/**/*.{js,ts,tsx, css, scss}'",
+        "lint-fix": "eslint '*/**/*.{js,ts,tsx, css, scss}' --quiet --fix",
         "size": "size-limit",
         "analyze": "size-limit --why",
         "storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242 --no-manager-cache",
         "build-storybook": "rm -rf ./storybook-build && mkdir ./storybook-build && cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -o ./storybook-build --docs",
         "debug": "cross-env NODE_OPTIONS=--inspect-brk STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242",
-        "clean": "rm -rf dist"
+        "create-artifact": "mkdir .artifact && cd dist/ && npm pack --pack-destination ../.artifact && cd ..",
+        "clean": "rm -rf dist && rm -rf .artifact",
+        "test": "jest"
     },
     "peerDependencies": {
         "react": "^18.1.0",
@@ -83,12 +86,12 @@
         "@babel/cli": "^7.16.0",
         "@babel/core": "^7.16.0",
         "@babel/plugin-transform-typescript": "^7.16.1",
-        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-env": "^7.18.2",
+        "@babel/preset-react": "^7.17.12",
         "@babel/preset-typescript": "^7.16.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/react-fontawesome": "^0.1.16",
-        "@mdx-js/rollup": "^2.0.0-rc.2",
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/plugin-buble": "^0.21.3",
         "@rollup/plugin-commonjs": "^22.0.0",
@@ -110,7 +113,9 @@
         "@storybook/react": "^6.5.4",
         "@storybook/testing-library": "^0.0.11",
         "@storybook/theming": "^6.5.4",
-        "@types/jasmine": "^3.10.2",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@types/jest": "^27.5.2",
         "@types/node": "^16.11.10",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.5",
@@ -127,6 +132,8 @@
         "eslint-plugin-storybook": "^0.5.5",
         "fork-ts-checker-webpack-plugin": "^6.5.0",
         "husky": "^7.0.4",
+        "jest": "^28.1.0",
+        "jest-environment-jsdom": "^28.1.0",
         "node-sass": "^7.0.1",
         "npm": "^8.7.0",
         "postcss": "^8.4.14",
@@ -143,8 +150,9 @@
         "sass-loader": "^12.6.0",
         "size-limit": "^7.0.3",
         "style-loader": "^3.3.1",
+        "ts-jest": "^28.0.3",
         "ts-loader": "^9.2.6",
-        "ts-node": "^10.4.0",
+        "ts-node": "^10.8.0",
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "tslib": "^2.3.1",
