--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -76,8 +76,8 @@
         "debug": "cross-env NODE_OPTIONS=--inspect-brk STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242",
         "create-artifact": "mkdir .artifact && cd dist/ && npm pack --pack-destination ../.artifact && cd ..",
         "clean": "rm -rf dist && rm -rf .artifact",
-        "test": "jest",
-        "test:watch": "jest --watch"
+        "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
+        "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --watch"
     },
     "peerDependencies": {
         "react": "^18.1.0",
@@ -123,6 +123,7 @@
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
         "babel-cli": "^6.26.0",
+        "babel-jest": "^28.1.0",
         "babel-loader": "^8.2.3",
         "babel-preset-latest": "^6.24.1",
         "cross-env": "^7.0.3",
@@ -134,6 +135,7 @@
         "fork-ts-checker-webpack-plugin": "^6.5.0",
         "husky": "^7.0.4",
         "jest": "^28.1.0",
+        "jest-config": "^28.1.0",
         "jest-environment-jsdom": "^28.1.0",
         "node-sass": "^7.0.1",
         "npm": "^8.7.0",
@@ -151,7 +153,6 @@
         "sass-loader": "^12.6.0",
         "size-limit": "^7.0.3",
         "style-loader": "^3.3.1",
-        "ts-jest": "^28.0.3",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.8.0",
         "ts-node-dev": "^1.1.8",
