--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -153,6 +153,7 @@
         "sass-loader": "^12.6.0",
         "size-limit": "^7.0.3",
         "style-loader": "^3.3.1",
+        "ts-jest": "^28.0.4",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.8.0",
         "ts-node-dev": "^1.1.8",
