--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -77,7 +77,8 @@
         "create-artifact": "mkdir .artifact && cd dist/ && npm pack --pack-destination ../.artifact && cd ..",
         "clean": "rm -rf dist && rm -rf .artifact",
         "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
-        "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --watch"
+        "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --watch",
+        "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
     },
     "peerDependencies": {
         "react": "^18.1.0",
@@ -105,6 +106,7 @@
         "@storybook/addon-actions": "^6.5.4",
         "@storybook/addon-essentials": "^6.5.4",
         "@storybook/addon-interactions": "^6.5.4",
+        "@storybook/addon-jest": "^6.5.6",
         "@storybook/addon-links": "^6.5.4",
         "@storybook/addons": "^6.5.4",
         "@storybook/builder-webpack5": "^6.5.4",
