--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -6,7 +6,7 @@
         "module": "es2020",
         "lib": ["dom", "dom.iterable", "esnext", "es6", "es2016", "es2017", "es2020"],
         "types": ["react", "node", "jest"],
-        "typeRoots": ["./src"],
+        "typeRoots": ["./src", "./__tests__"],
         "resolveJsonModule": false,
         "isolatedModules": true,
         "importHelpers": true,
