--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -63,7 +63,7 @@
     "scripts": {
         "prebuild": "npm run clean && prettier --write src/",
         "build": "rollup --config",
-        "postbuild": "node packageBuilder && npm run create-artifact",
+        "postbuild": "node packageBuilder && npm run create-artifacts",
         "build:watch": "rollup --config --watch",
         "prepublish": "npm run build",
         "publish": "npm publish ./dist",
@@ -74,13 +74,14 @@
         "storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242 --no-manager-cache",
         "build-storybook": "rm -rf ./storybook-build && mkdir ./storybook-build && cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -o ./storybook-build --docs",
         "debug": "cross-env NODE_OPTIONS=--inspect-brk STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242",
-        "create-artifact": "mkdir .artifact && cd dist/ && npm pack --pack-destination ../.artifact && cd ..",
+        "create-artifacts": "mkdir .artifact && cd dist/ && npm pack --pack-destination ../.artifact && cd .. && npm run docgen",
         "clean": "rm -rf dist && rm -rf .artifact",
         "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
         "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --watch",
         "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
-        "jsdoc": "./node_modules/.bin/jsdoc",
-        "gendoc": "npm run jsdoc dist/index.js"
+        "docgen": "mkdir .artifact/jsdoc && ./node_modules/.bin/jsdoc src/index.ts -d .artifact/jsdoc",
+        "tsgen": "npm run tsc src/index.ts --project tsconfig.json",
+        "tsc": "tsc"
     },
     "peerDependencies": {
         "react": "^18.1.0",
@@ -165,7 +166,7 @@
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "tslib": "^2.3.1",
-        "typescript": "^4.5.2",
+        "typescript": "^4.7.3",
         "typescript-plugin-css-modules": "^3.4.0"
     },
     "workspaces": [
